force-app/main/default/objects/Employer__c/Employer__c.object-meta.xml
<CustomObject>
    <label>Employer</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>