force-app/main/default/objects/Employer__c/fields/Candidate_Details__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Details</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Employers</relationshipLabel>
    <relationshipName>Employers</relationshipName>
    <type>Lookup</type>
</CustomField>