force-app/main/default/objects/Employer__c/fields/Documents_Submitted_Details__c.field-meta.xml
<CustomField>
    <fullName>Documents_Submitted_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documents Submitted Details</label>
    <referenceTo>Documents_Submitted__c</referenceTo>
    <relationshipLabel>Past Employers</relationshipLabel>
    <relationshipName>Employers</relationshipName>
    <type>Lookup</type>
</CustomField>