force-app/main/default/objects/Employer__c/fields/FileBody__c.field-meta.xml
<CustomField>
    <fullName>FileBody__c</fullName>
    <label>FileBody</label>
    <length>25</length>
    <type>Text</type>
</CustomField>