force-app/main/default/objects/Employer__c/fields/Key_Resposibilities__c.field-meta.xml
<CustomField>
    <fullName>Key_Resposibilities__c</fullName>
    <label>Key Resposibilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>