force-app/main/default/objects/Employer__c/fields/Reason_of_Gap__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Gap__c</fullName>
    <label>Reason of Gap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>