force-app/main/default/objects/Employer__c/fields/Reference_Email__c.field-meta.xml
<CustomField>
    <fullName>Reference_Email__c</fullName>
    <label>Reference Email</label>
    <type>Email</type>
</CustomField>