force-app/main/default/objects/Employer__c/fields/Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reference_Phone__c</fullName>
    <label>Reference Phone</label>
    <type>Phone</type>
</CustomField>